测试完成，添加了吃东西加速的功能，接下来就是一些简单的东西的添加了，有时间再做

--- a/main.html
+++ b/main.html
@@ -34,10 +34,11 @@
     </div>
     <div class="container_box" id="showing_bar">
         <div class="mask"></div>
+        <button id="start">start</button>
     </div>
 </body>
 
-
+<script src="./actions/animation.js"></script>
 <script src="./actions/snake.js"></script>
 <script src="./actions/food.js"></script>
 <script src="./actions/grid.js"></script>
